<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="model"
            type="br.dev.moreira.rdm.ui.home.HomeViewModel" />
        
        <variable
            name="activity"
            type="android.app.Activity" />

        <import type="android.view.View"/>
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/chest_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/chest"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_home">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="numberDecimal"
                        android:text="@={model.chest}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/right_biceps_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/right_biceps"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chest_field">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="numberDecimal"
                        android:text="@={model.right_biceps}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/left_biceps_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/left_biceps"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/right_biceps_field">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="numberDecimal"
                        android:text="@={model.left_biceps}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/right_forearm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/right_forearm"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/left_biceps_field">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="numberDecimal"
                        android:text="@={model.right_forearm}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/left_forearm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/left_forearm"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/right_forearm">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="numberDecimal"
                        android:text="@={model.left_forearm}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/waist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/waist"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/left_forearm">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="numberDecimal"
                        android:text="@={model.waist}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/hips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/hips"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/waist">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="numberDecimal"
                        android:text="@={model.hips}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:inputType="numberDecimal"
                    android:id="@+id/right_thigh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/right_thigh"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hips">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="numberDecimal"
                        android:text="@={model.right_thigh}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/left_thigh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/left_thigh"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/right_thigh">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="numberDecimal"
                        android:text="@={model.left_thigh}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/right_calf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/right_calf"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/left_thigh">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="numberDecimal"
                        android:text="@={model.right_calf}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/left_calf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/left_calf"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/right_calf">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="numberDecimal"
                        android:text="@={model.left_calf}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/weight"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/left_calf">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="numberDecimal"
                        android:text="@={model.weight}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp"
                    android:gravity="end">
                    <Button
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:id="@+id/clear_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:onClick="@{(v)-> model.clear()}"
                        android:text="@string/clear" />
                    <Button
                        android:id="@+id/save_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{(v)-> model.save()}"
                        android:text="@string/save" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

